chane image file classpath

--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
                 help.</p> <br>
 
 
-            <p style="font-size: 17px; letter-spacing: .5px; color: white; margin: 0px 0px 15px;">Please feel free to
-                email us at Ghumphir@gmail.com or message us on facebook,<br>
+                <p style="font-size: 17px; letter-spacing: .5px; color: white; margin: 0px 0px 15px;">Please feel free to
+                    email us at Ghumphir@gmail.com or message us on facebook,<br>
                 instagram
                 directly. Additionally, you can fill out the following form if you any other questions.</p>
 
@@ -341,11 +341,11 @@
     </div>
 
     <script>
-        var loader = document.getElementById("splash");
-        window.addEventListener("load", function () {
-            loader.style.display = "none";
+        // var loader = document.getElementById("splash");
+        // window.addEventListener("load", function () {
+        //     loader.style.display = "none";
 
-        })
+        // })
 
         setTimeout(() => {
             document.getElementById('ring').style.display = 'none';
