--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <h5 class="paragraph"><span>Family</span> Package</h5>
 
                 <div class="discribition">Enjoy the trip with friends and make alots of
-                    forgotable memories
+                    unforgotable memories
 
                     with cheapest price and best facilities.</div>
 
