--- a/japnese.html
+++ b/japnese.html
@@ -40,11 +40,11 @@
 
         <div class="header-right" id="header-right">
             <div class="header">
-                <a href="#top" class="link">Home</a>
-                <a href="#service" class="link">Services</a>
-                <a href="#info" class="link">Information</a>
-                <a href="#contact-us" class="link">Contact us</a>
-                <a href="image.html" class="link">Gallery</a>
+                <a href="#top" class="link">ホム</a>
+                <a href="#service" class="link">サビス</a>
+                <a href="#info" class="link">情報</a>
+                <a href="#contact-us" class="link">問い合わせ</a>
+                <a href="image.html" class="link">ギャラリー</a>
 
             </div>
 
@@ -55,19 +55,14 @@
                     style="color: white;background-color: black;border: none; padding: 1rem;" id="daymode-id"
                     onclick="daymode()"></i>
 
-                <a href="explore-sign.html" class="sigh-in-icon">Sigh In</a>
-               
-
+                <a href="explore-sign.html" class="sigh-in-icon">ログイン</a>
                 <li class="dropdown-lng">
                     <a href=""><i class="bi bi-globe2 language-option "></i></a>
-                    <div class="drop-dwn-lng-btn">
-                        <a href="">EN</a>
-                        <a href="japnese.html">JP</a>
+                    <div class="drop-dwn-lng-btn ">
+                        <a href="index.html">EN</a>
+                        <a href="">JP</a>
                         <a href="">NP</a></div>
                 </li>
-
-
-
             </div>
         </div>
     </div>
@@ -97,15 +92,16 @@
 
     <div class="service-items-box">
         <div class="title">
-            <div class="ser-title family">
+            <div class="ser-title family">ジ
 
 
                 <div class="discribition">
-                    <h5 class="paragraph"><span>Family</span> Package</h5>
-                    <div class="text"> Enjoy the trip with friends and make alots of
-                        unforgotable memories
+                    <h5 class="paragraph"><span>家族</span> パケジ</h5>
 
-                        with cheapest price and best facilities.</div>
+                    友達と旅行を楽しんで、たくさん作ってください
+                    忘れられない思い出
+
+                    最安の価格と最高の設備を備えています。
                 </div>
 
                 <!-- <p style="text-align: center;"><a class="button" href="">Read More</a></p> -->
@@ -116,11 +112,12 @@
             <div class="ser-title friends">
 
                 <div class="discribition">
-                    <h5 class="paragraph"><span>Friends</span> Package</h5>
-                    <div class="text">Enjoy the trip with family
-                        with cheapest price and best facilities.</div>
+                    <h5 class="paragraph"><span>友達</span>パケジ</h5>
+                    家族で旅行を楽しんでください
+                    最安の価格と最高の設備を備えています。
                 </div>
-
+                <p style="text-align: center ">
+                    <!-- <a class="button" href="">Read More</a></p> -->
             </div>
         </div>
 
@@ -128,9 +125,9 @@
             <div class="ser-title couple ">
 
                 <div class="discribition">
-                    <h5 class="paragraph"><span>Couple</span> Package</h5>
-                    <div class="text"> Enjoy the trip and spend time with each other
-                        with cheapest price and best facilities.</div>
+                    <h5 class="paragraph"><span>カップル</span> パケジ</h5>
+                    旅行を楽しんで、お互いに時間を過ごしましょう
+                    最安値と最高の設備で。
                 </div>
                 <p style="text-align: center ">
                     <!-- <a class="button" href="">Read More</a></p> -->
@@ -142,11 +139,11 @@
 
 
     <div class="check-price">
-        You can check the price of the package <a href="price.html">Here <i class="bi bi-hand-index-thumb-fill"></i></a>
+        パッケージの価格を確認できます <a href="price.html">Here <i class="bi bi-hand-index-thumb-fill"></i></a>
     </div>
     <div class="check-price">
-        You can book the package from <a href="Html/Booking-page.html">Here <i
-                class="bi bi-hand-index-thumb-fill"></i></a>
+
+        パッケージは以下から予約できます <a href="Html/Booking-page.html">Here <i class="bi bi-hand-index-thumb-fill"></i></a>
     </div>
 
 
@@ -155,26 +152,27 @@
 
     <div class="facilities">
         <p>
-            we also Provide transport service
-            and guide who can speak
-            in many language.
+            輸送サービスも提供しています
+            話せる人をガイドします
+            多くの言語で。
 
         </p>
     </div>
     <hr>
     <div class="guide-box">
         <div class="about-guide">
-            <h5>Guide-1</h5>
+            <h5>ガイドー１</h5>
             <div class="info-guide">
+
 
                 <img src="images/niroj.jpg" alt="">
                 <div class="discribition-guide">
-                    <span>Niroj Kuikel</span> <br>
+                    <span>クイケル　ニロズ</span> <br>
                     <i>Sketch/Explorer <br>
-                        <span>Nepali,English,Arebic, <br> Korean & Hindi</span><br>
+                        <span>ネパール語、英語、アラビア語、 <br>韓国語とヒンディー語</span><br>
                         <i class="bi bi-envelope-check-fill"></i> niroj123@gmail.com <br>
-                        <i class="bi bi-airplane   icon-rotate-2"></i><span>Travel Tips & Guide </span> <br>
-                        DM to partner up! <span class="icon-rotate"><i class="bi bi-hand-index-thumb"></i></span><br>
+                        <i class="bi bi-airplane   icon-rotate-2"></i><span>旅行のヒントとガイド</span> <br>
+                        パートナーになるにはDMしてください！ <span class="icon-rotate"><i class="bi bi-hand-index-thumb"></i></span><br>
                         <i class="bi bi-link"><a href="">Instagram link</a></i>
                     </i>
 
@@ -183,20 +181,19 @@
         </div>
 
         <div class="about-guide">
-            <h5>Guide-2</h5>
+            <h5>ガイド-2</h5>
             <div class="info-guide">
 
 
 
                 <img src="images/sushan.jpg" alt="">
                 <div class="discribition-guide">
-
-                    <span>Sushan Kattle </span> <br>
-                    <i>Mechanical engineer/Photographer <br>
-                        <span>Nepali,English, Japanese & Hindi</span> <br>
+                    <span>カッテル　スサン </span> <br>
+                    <i>機械エンジニア/写真家 <br>
+                        <span>ネパール語、英語、日本語、ヒンディー語</span> <br>
                         <i class="bi bi-envelope-check-fill"></i> sushan456@gmail.com <br>
-                        <i class="bi bi-airplane  icon-rotate-2"></i> <span>Travel Tips & Guide </span> <br>
-                        DM to partner up!<span class="icon-rotate"><i class="bi bi-hand-index-thumb"></i></span>
+                        <i class="bi bi-airplane  icon-rotate-2"></i> <span>旅行のヒントとガイド</span> <br>
+                        パートナーになるにはDMしてください！<span class="icon-rotate"><i class="bi bi-hand-index-thumb"></i></span>
                         <br>
                         <i class="bi bi-link"><a href="">Instagram link</a></i>
                     </i>
@@ -206,18 +203,18 @@
         </div>
 
         <div class="about-guide">
-            <h5>Guide-3</h5>
+            <h5>ガイド-3</h5>
             <div class="info-guide">
 
 
                 <img src="images/praazwal.jfif" alt="">
                 <div class="discribition-guide">
-                    <span>Prazwal Adhikari</span> <br>
-                    <i>Food Technologists/Travel Guide <br>
-                        <span>Nepali,English, Chinese & Hindi</span> <br>
+                    <span>プラジャル　アディカリ</span> <br>
+                    <i>食品技術者/旅行ガイド <br>
+                        <span>ネパール語、英語、中国語、ヒンディー語</span> <br>
                         <i class="bi bi-envelope-check-fill"></i> adkstar678@gmail.com <br>
-                        <i class="bi bi-airplane icon-rotate-2"></i> <span>Travel Tips & Guide </span> <br>
-                        DM to partner up! <span class="icon-rotate"><i class="bi bi-hand-index-thumb"></i></span>
+                        <i class="bi bi-airplane icon-rotate-2"></i> <span>旅行のヒントとガイド </span> <br>
+                        パートナーになるにはDMしてください！ <span class="icon-rotate"><i class="bi bi-hand-index-thumb"></i></span>
                         <br>
                         <i class="bi bi-link"><a href="">Instagram link</a></i>
                     </i>
@@ -229,53 +226,53 @@
         </div>
     </div>
     <div class="extra-services">
-        <div class="extra-services-avaiable"><a href="https://nepalvehiclerental.com/"></i>Taxi</a></div>
+        <div class="extra-services-avaiable"><a href="https://nepalvehiclerental.com/"></i>タクシー</a></div>
         <div class="extra-services-avaiable"><a
-                href="https://www.transportsinnepal.com/local-bus-hire-and-rent.html">Bus</a></div>
+                href="https://www.transportsinnepal.com/local-bus-hire-and-rent.html">バス</a></div>
         <div class="extra-services-avaiable"><a
-                href="https://www.booking.com/country/np.en.html?aid=306395;label=np-Q3kD_kLuz2gqs3hx4SOZDAS638077721160:pl:ta:p1720:p2:ac:ap:neg:fi:tikwd-186697216:lp1009798:li:dec:dm:ppccp=UmFuZG9tSVYkc2RlIyh9YZVcNNsENnH02-pWD53qm9c;ws=&gclid=Cj0KCQiAic6eBhCoARIsANlox84ZcOhy0iZ-im26kGZp840tiTKOs9Uq8FvDEIX_0tgDJtHTXLrhmXoaAnvKEALw_wcB">Hotels</a>
+                href="https://www.booking.com/country/np.en.html?aid=306395;label=np-Q3kD_kLuz2gqs3hx4SOZDAS638077721160:pl:ta:p1720:p2:ac:ap:neg:fi:tikwd-186697216:lp1009798:li:dec:dm:ppccp=UmFuZG9tSVYkc2RlIyh9YZVcNNsENnH02-pWD53qm9c;ws=&gclid=Cj0KCQiAic6eBhCoARIsANlox84ZcOhy0iZ-im26kGZp840tiTKOs9Uq8FvDEIX_0tgDJtHTXLrhmXoaAnvKEALw_wcB">ホテル</a>
         </div>
     </div>
     <hr>
     <div class="information" id="info">
         <p class="info-bold">Information</p>
         <div class="paragraph-left-spacing">
-            <p> “Ghumphir” means Travel in Nepali. And we help to do that. We
-                are a group of Travel Enthusiasts, Photographers and Adventurers. We love travelling in and around
-                Nepal and share our Stories. We have travelled all around Nepal, some known and some very rarely
-                known places but equally magical.</p>
+            <p> 「グンフィール」とはネパール語で旅行を意味します。そして私たちはそれをお手伝いします。私たち
+                は旅行愛好家、写真家、冒険家のグループです。私たちは国内外の旅行が大好きです
+                ネパールに来て私たちのストーリーを共有してください。私たちはネパール中を旅してきましたが、有名なものもあれば、めったにないものもあります。
+                有名な場所ですが、同じくらい魅力的です。</p>
 
-            <p>Ghumphir began as Travel website Planner among a group of Friends, who then decided why not share the
-                beauty
-                of nepal all around the world. Posting to social media wasn't enough, and Ghumphir was born.
-                Ghumphir Facebook Page, which is getting popular in a very short span of time, and then, we start
-                webpage!, we
-                are all over the web now. This website is another attempt to share our Travel Stories , Photo and
-                recomand
-                places to Nature Lovers around the Globe..</p>
+            <p>Ghumphir は、友人グループの中で旅行 Web サイトのプランナーとして活動を開始しました。
+                美しさ
+                世界中のネパール。ソーシャル メディアに投稿するだけでは十分ではなく、Gumphir が誕生しました。
+                Ghumphir Facebook ページは非常に短期間で人気を博しており、その後、
+                ウェブページ!、私たちは
+                今ではウェブ上に溢れています。このウェブサイトは、旅行のストーリー、写真、
+                推奨する
+                世界中の自然愛好家のための場所。.</p>
         </div>
     </div>
     <hr>
     <div class="trnd-places">
-        <p class="info-bold">Trending placess</p>
+        <p class="info-bold">話題の場所</p>
 
     </div>
     <div class="trending-place">
         <div class="places ">
             <div class="place1 east-ilam">
-                <a href="../places-html/ilam.html"><i>Ilam</i></a>
+                <a href="../places-html/ilam.html"><i>イラム</i></a>
             </div>
         </div>
 
         <div class="places ">
             <div class="place1 west-mustang">
-                <a href="../places-html/mustang.html"><i>Mustang</i></a>
+                <a href="../places-html/mustang.html"><i>ムスタング</i></a>
             </div>
         </div>
 
         <div class="places ">
             <div class="place1 middle-pokhara">
-                <a href="../places-html/pokhara.html"><i>Pokhara</i></a>
+                <a href="../places-html/pokhara.html"><i>ポカラ</i></a>
             </div>
         </div>
     </div>
@@ -285,30 +282,33 @@
         <p class="info-bold">Categories</p>
     </div>
     <div class="categories-text-bar">
-        <div class="categories-list"><a href="">Adventure</a></div>
-        <div class="categories-list"><a href="">Relegion</a></div>
-        <div class="categories-list"><a href="">Cities</a></div>
-        <div class="categories-list"><a href="">Nature</a></div>
-        <div class="categories-list"><a href="">Hiking</a></div>
-        <div class="categories-list"><a href="">Village-life</a></div>
-        <div class="categories-list"><a href="">Camp-fire</a></div>
+        <div class="categories-list"><a href="">
+                冒険
+            </a></div>
+        <div class="categories-list"><a href="">宗教</a></div>
+        <div class="categories-list"><a href="">都市</a></div>
+        <div class="categories-list"><a href="">自然</a></div>
+        <div class="categories-list"><a href="">ハイキング</a></div>
+        <div class="categories-list"><a href="">村の生活</a></div>
+        <div class="categories-list"><a href="">キャンプファイヤー</a></div>
     </div>
     <div class="contact-us" id="contact-us">
         <div class="contact">
-            <p class="info-bold">Contact Us</p>
+            <p class="info-bold">お問い合わせ</p>
         </div>
         <hr>
 
         <div class="comment">
 
-            <p style=" font: 15px ;  font-weight: bolder; color: white; ">If you have any questions, we would love to
-                help.</p> <br>
+            <p style=" font: 15px ;  font-weight: bolder; color: white; ">
+                ご質問がございましたら、お気軽にお問い合わせください
+                ヘルプ。</p> <br>
 
 
-            <p style="font-size: 17px; letter-spacing: .5px; color: white; margin: 0px 0px 15px;">Please feel free to
-                email us at Ghumphir@gmail.com or message us on facebook,<br>
-                instagram
-                directly. Additionally, you can fill out the following form if you any other questions.</p>
+            <p style="font-size: 17px; letter-spacing: .5px; color: white; margin: 0px 0px 15px;">お気軽にどうぞ
+                Ghumphir@gmail.com に電子メールを送信するか、Facebook でメッセージを送信してください。<br>
+                インスタグラム
+                直接。さらに、その他のご質問がある場合は、次のフォームにご記入いただけます。</p>
 
             <hr>
 
@@ -317,38 +317,36 @@
 
         <div class="comment-layout">
 
-            <label>Yourname(required) </label> <br>
+            <label>名前(required) </label> <br>
             <input type="text" placeholder="Enter your name" required> <br>
             <br>
 
-            <label>Email(required) </label><br>
+            <label>メール(required) </label><br>
             <input type="text" placeholder="Enter your email" required class="inputbox"> <br>
             <br>
 
-            <label>PhoneNumber(required) </label><br>
+            <label>電話番号(required) </label><br>
             <input type="text" placeholder="980*******" required class="inputbox"> <br>
 
 
-            <label> Subject </label><br />
+            <label>主題</label><br />
             <input type="text" value="" size="40" aria-invalid="false" class="inputbox"> <br>
-            <label> Your Message<br />
+            <label>メセジ<br />
                 <textarea name="your-message" cols="70" rows="10" aria-invalid="false"
                     class="inputbox"></textarea></span>
             </label>
-            <div class="comment-send-button"> <a href=""><button>Send</button></a></div>
+            <div class="comment-send-button"> <a href=""><button>送信</button></a></div>
 
 
         </div>
-
         <h3 style="font-size: 2rem; color: white; padding-top: 3rem;">Customers review</h3>
 
         <div class="review">
             <h3 style="color: white;">Amazing Adventure!</h3>
             <p class="rating">&#9733; &#9733; &#9733; &#9733; &#9734;</p>
             <p class="customer-name"><i class="bi bi-person-fill"></i>Punam poudel</p>
-            <p>Ghumphir organized an incredible trip for me. The itinerary was well-planned, and the guides were
-                knowledgeable and friendly. I had a fantastic experience exploring new places and immersing in the local
-                culture.</p>
+            <p>グンフィールは私のために素晴らしい旅行を企画してくれました。旅程は綿密に計画され、ガイドは親切でした。
+                知識が豊富でフレンドリー。新しい場所を探索し、地元の文化に浸る素晴らしい経験をしました。</p>
             <p class="date">Posted on June 15, 2023</p>
         </div>
 
@@ -356,8 +354,8 @@
             <h3 style="color: white;">Unforgettable Journey</h3>
             <p class="rating">&#9733; &#9733; &#9733; &#9733; &#9733;</p>
             <p class="customer-name"><i class="bi bi-person-fill"></i>Manoj paudyal</p>
-            <p>Thanks to Ghumphir, I had the most memorable travel experience of my life. The accommodations were
-                top-notch, the activities were thrilling, and the entire trip was seamless. Highly recommended!</p>
+            <p>グンフィールのおかげで、人生で最も思い出に残る旅行体験ができました。宿泊施設は、
+                一流で、アクティビティはスリル満点で、旅行全体がスムーズでした。強くお勧めします！</p>
             <p class="date">Posted on June 10, 2023</p>
         </div>
 
@@ -365,13 +363,13 @@
             <h3 style="color: white;">Exceptional Service</h3>
             <p class="rating">&#9733; &#9733; &#9733; &#9734; &#9734;</p>
             <p class="customer-name"><i class="bi bi-person-fill"></i>Bhadra poudel</p>
-            <p>I enjoyed my trip with Ghumphir, but there were a few minor hiccups along the way. The team promptly
-                addressed my concerns and provided excellent customer service. Overall, a good experience.</p>
+            <p>グンフィールとの旅は楽しかったですが、途中でいくつかの小さな問題がありました。チームはすぐに
+                私の懸念に対処し、優れた顧客サービスを提供してくれました。全体として、良い経験でした。</p>
             <p class="date">Posted on June 5, 2023</p>
         </div>
 
 
-        <div class="tnk-msg"> <span>Thank You For Visiting Us ! <i class="bi bi-emoji-smile"></i></span>
+        <div class="tnk-msg"> <span>ご訪問いただきありがとうございます! <i class="bi bi-emoji-smile"></i></span>
 
             <footer><span>ありがとうございます。</span></footer>
             <footer><span>धन्यवाद!!</span>
@@ -388,11 +386,9 @@
             <a href=""><i class="bi bi-twitter"></i></a>
             <a href=""><i class="bi bi-envelope"></i></a>
         </footer>
-        <footer><a href="Html/Terms&con.html">Terms&Conditions</a></footer>
+        <footer><a href="Html/Terms&con.html">利用規約</a></footer>
 
     </footer>
-
-  
 
 
     <div id="back-to-top">
